# gpu_experiments

./: .fuse_hidden000000fb00000003  .gitignore  .poisson.c.swp  .poisson.py.swp  .poisson_gpu.py.swp  .working_gpu.py.swp  1D_Array.c  1D_Array.cpp  1D_Array.cu  1D_Array_cu  CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  README.md  TensorflowSliceAssignment.ipynb  Untitled.ipynb  cmake_install.cmake  mardas  matmul.cu  matmul_cu  ne.txt  ni.txt  nvblas.conf  nvblas.conf.bak  opencv_version.cpp  poisson.c  poisson.cu  poisson.m  poisson.py  poisson.py.bak  poisson_gnumpy.py  poisson_gpu.py  poisson_gpu_bak.py  poisson_tensor.py  poisson_torch.py  run.sh  working_gnumpy.py  working_gpu.py  working_tensor.py  (+1 more)
.ipynb_checkpoints/: TensorflowSliceAssignment-checkpoint.ipynb  Untitled-checkpoint.ipynb
betting/: odds.csv  odds.ipynb  odds.ods  odds_original.csv
betting/.ipynb_checkpoints/: odds-checkpoint.ipynb
hd5/: .gitignore  1D_Array.cu  1D_Array_cu  1D_Array_v01.cu  1D_Array_v01_cu  1D_Array_v02.cu  1D_Array_v02_cu  1D_Array_v03.c  1D_Array_v03.cu  1D_Array_v03_cu  h5reader.c  poisson.py  run.sh  working_gpu.py
logs/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
